k8s/explore/webserver-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webserver-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`monequilibre.inventaire.local`)
      kind: Rule
      services:
        - name: webserver-service
          port: 80
